Fixed jump on mobile on address bar toggle.

--- a/source-sass/_elements.scss
+++ b/source-sass/_elements.scss
@@ -309,7 +309,7 @@
 // Pulsing arrow at the bottom of a section
 .scroll-hint {
   display: block;
-  margin: 7vh auto;
+  margin: 15px auto;
   color: $light-orange;
 }
 
