--- a/source-sass/app.scss
+++ b/source-sass/app.scss
@@ -313,8 +313,6 @@ bold {
 
 .hero {
   z-index: 1501;
-  min-height: 100%;
-  height: 100%;
   background: $dark-blue;
   text-align: center;
 
@@ -348,7 +346,7 @@ bold {
 
   h1 {
     margin-top: 32%;
-    margin-bottom: 5vh;
+    margin-bottom: 10px;
     line-height: 1;
     color: #fff;
     text-shadow: 0 0 15px rgba($dark-blue, 0.75);
@@ -483,7 +481,7 @@ bold {
 .prediction {
 
   h1 {
-    margin-bottom: 2.5vh;
+    margin-bottom: 10px;
 
     @media #{$medium-up} {
       margin-bottom: 5vh;
